[package]
name = "focl"
version = "0.1.0"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2021"
license = "MIT"
description = "focl/focld - lightweight Rust BGP speaker"
repository = "https://github.com/bgpkit/focl"
documentation = "https://docs.rs/focl"
readme = "README.md"
keywords = ["bgp", "bgpkit", "routing", "networking"]
categories = ["network-programming"]

[lib]
name = "focl"
path = "src/lib.rs"

[[bin]]
name = "focl"
path = "src/bin/focl.rs"

[[bin]]
name = "focld"
path = "src/bin/focld.rs"

[dependencies]
anyhow = "1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-types = "1"
bgpkit-parser = "0.15"
bytes = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
bzip2 = "0.4"
chrono = { version = "0.4", features = ["clock", "serde"] }
hex = "0.4"
ipnet = { version = "2", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net", "io-util", "fs"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
walkdir = "2"
